修改 es、mongo 支持多单元测试和功能相同的业务流程。